--- a/_posts/2020-06-01-warning.md
+++ b/_posts/2020-06-01-warning.md
@@ -5,8 +5,13 @@ title:  "踩过的坑"
 
 1. MySQL DATETIME 只能精确到秒
 
-    踩坑场景：a 表有个字段是 end_at DATETIME，代码中先是 `update a set end_at = new Date() where id = 1`， 然后再查 ` select * from a where end_at > new Date()`。 注意这两个 new Date() 中间隔了可能几 ms。期望的是查出来是空列表，结果却把刚才的 id=1 的记录查出来了。原因是 DATETIME 只能精确到秒，第一个 update 语句设置的 new Date() = 1591020695123 向后取整精确到秒 1591020696000，如果第二个 new Date() = 1591020695223， 这样 select 就会查出 id=1 的记录
+    踩坑场景：a 表有个字段是 end_at DATETIME，代码中先是 `update a set end_at = $(new Date()) where id = 1`， 然后再查 ` select * from a where end_at > $(new Date())`。 注意这两个 new Date() 中间隔了可能几 ms。期望的是查出来是空列表，结果却把刚才的 id=1 的记录查出来了。原因是 DATETIME 只能精确到秒，第一个 update 语句设置的 new Date() = 1591020695123 向后取整精确到秒 1591020696000，如果第二个 new Date() = 1591020695223， 这样 select 就会查出 id=1 的记录
+    // 这里测试了下，应该是四舍五入
 
 1. rabbitmq 在 Mac 上使用的配置文件路径
 
     测试环境的 rabbitmq 年久失修，负载很高，web 界面基本打不开，无法调试。于是在本机安装了一个，`brew install rabbitmq` 安装还算顺利，下载的时候出错，重试几次成功了。然后 `/usr/local/opt/rabbitmq/sbin/rabbitmq-server` 启动，本地 http://localhost:15672 访问没问题，但是用 http://192.168.1.12:15672 访问 guest 账号登陆时提示 User can only log in via localhost，文档中说要在配置文件 rabbitmq.conf 文件中添加一行 `loopback_users=none`，但是找默认的配置文件找不到（后来发现是自己对 mac 的程序安装目录不熟），于是自己按文档提示新建了 config file `/usr/local/opt/rabbitmq/etc/rabbitmq/rabbitmq.conf`，且配置了环境变量 `export RABBITMQ_CONFIG_FILE=/usr/local/opt/rabbitmq/etc/rabbitmq/rabbitmq.conf`，结果启动后查看日志文件仍然是 `config file(s) : (none)`
+
+1. springboot 启动提示 no main manifest attribute
+
+    https://stackoverflow.com/questions/54867295/springboot-no-main-manifest-attribute-maven
